--- a/index.html
+++ b/index.html
@@ -445,9 +445,24 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                                     Code</a>
                             </div>
                         </div>
+
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>4</span> College Canteen</h6>
+                                <h6> <span>4</span>GATE Rank Predictor</h6>
+                            </div>
+                            <div class="pro-img">
+                                <img src="assets/img/project/mmlGate.png" alt="project image">
+                            </div>
+                            <div class="pro-links">
+                                <a href="https://rankpredictormindmatrix.net.in/" target="_blank"> Live Application</a>
+                              
+                            </div>
+                        </div>
+
+
+                        <div class="project">
+                            <div class="pro-name">
+                                <h6> <span>5</span> College Canteen</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/cc.png" alt="project image">
@@ -460,7 +475,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                         </div>
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>5</span> The Happy Place</h6>
+                                <h6> <span>6</span> The Happy Place</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/Hp.png" alt="project image">
@@ -473,10 +488,10 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                            <div class="project">
                             <div class="pro-name">
-                                <h6> <span>6</span> Eleven</h6>
+                                <h6> <span>7</span> Eleven</h6>
                             </div>
                             <div class="pro-img">
-                                <img src="assets/img/bg-eleven.png" alt="project image">
+                                <img src="assets/img/project/bg-eleven.png" alt="project image">
                             </div>
                             <div class="pro-links">
                                 <a href="https://elevenfinds.com/" target="_blank">Live Website</a>
@@ -486,7 +501,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                        <div class="project">
                             <div class="pro-name">
-                                <h6> <span>7</span> Eskaylocks </h6>
+                                <h6> <span>8</span> Eskaylocks </h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/eskay.png" alt="project image">
@@ -499,7 +514,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>8</span> Start & Shine UI/UX Design</h6>
+                                <h6> <span>9</span> Start & Shine UI/UX Design</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ui_sns.png" alt="project image">
@@ -515,7 +530,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>9</span> NewbieCare</h6>
+                                <h6> <span>10</span> NewbieCare</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/nbc.png" alt="project image">
@@ -529,7 +544,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>10</span>Electra International </h6>
+                                <h6> <span>11</span>Electra International </h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ee.png" alt="project image">
@@ -543,7 +558,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>11</span>AMU
+                                <h6> <span>12</span>AMU
                                     Tech Conference 2023</h6>
                             </div>
                             <div class="pro-img">
@@ -559,7 +574,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>12</span> E-Cell ZHCET, AMU</h6>
+                                <h6> <span>13</span> E-Cell ZHCET, AMU</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ecell.png" alt="project image">
@@ -573,7 +588,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>13</span> Resume Buider</h6>
+                                <h6> <span>14</span> Resume Buider</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/rb.png" alt="project image">
@@ -589,7 +604,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>14</span>Food App UI/UX Design</h6>
+                                <h6> <span>15</span>Food App UI/UX Design</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ui_foodapp.png" alt="project image">
@@ -606,7 +621,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>15</span> Alien Bong</h6>
+                                <h6> <span>16</span> Alien Bong</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ab.png" alt="project image">
@@ -620,7 +635,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>16</span> Beast Hub</h6>
+                                <h6> <span>17</span> Beast Hub</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/bbh.png" alt="project image">
@@ -635,7 +650,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>17</span>BHIM UPI App UI/UX Design</h6>
+                                <h6> <span>18</span>BHIM UPI App UI/UX Design</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ui_upi.png" alt="project image">
@@ -653,7 +668,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
 
                         <div class="project">
                             <div class="pro-name">
-                                <h6> <span>18</span>Uber Redesign -UI/UX Design</h6>
+                                <h6> <span>19</span>Uber Redesign -UI/UX Design</h6>
                             </div>
                             <div class="pro-img">
                                 <img src="assets/img/project/ui_uber re.png" alt="project image">
