--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                                 <img src="assets/img/project/mmlGate.png" alt="project image">
                             </div>
                             <div class="pro-links">
-                                <a href="https://rankpredictormindmatrix.net.in/" target="_blank"> Live Application</a>
+                                <a href="https://gaterankpredictor.netlify.app/" target="_blank"> Live Application</a>
                               
                             </div>
                         </div>
