--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                                 <img src="assets/img/project/cc.png" alt="project image">
                             </div>
                             <div class="pro-links">
-                                <a href="https://www.collegecanteen.co.in/" target="_blank">Live Website</a>
+                                <a href="http://collegecanteen.in" target="_blank">Live Website</a>
                                 <a href="https://github.com/Abhishek-207/College-Canteen-CC" target="_blank">Source
                                     Code</a>
                             </div>
