--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta name="description" content="">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://abhishekpro.dev/">
+<meta property="og:url" content="https://abhishek-pro.dev/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Abhishek Singh">
 <meta property="og:description" content="">
@@ -25,8 +25,8 @@
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="abhishekpro.dev">
-<meta property="twitter:url" content="https://abhishekpro.dev/">
+<meta property="twitter:domain" content="abhishek-pro.dev">
+<meta property="twitter:url" content="https://abhishek-pro.dev/">
 <meta name="twitter:title" content="Abhishek Singh">
 <meta name="twitter:description" content="">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/7c7a5562-5701-4c33-ba6c-37e833bbd044.jpg?token=97IZVubHDPrdTm_CIg0YHoNJutwDykDpObKmOprx1cw&height=800&width=1200&expires=33242965137">
