New meta tags added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Abhishek Singh">
 <meta property="og:description" content="">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/documents/7c7a5562-5701-4c33-ba6c-37e833bbd044.jpg?token=97IZVubHDPrdTm_CIg0YHoNJutwDykDpObKmOprx1cw&height=800&width=1200&expires=33242965137">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/69ad5b5f-a0cb-4d6a-a5ef-2c4e4b162779.png?token=5K_pqYbRDovquRAK4kWSnuBCv3t6hWnuoGA81KO-wgc&height=550&width=825&expires=33281785501">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -29,9 +29,9 @@
 <meta property="twitter:url" content="https://abhishek-pro.dev/">
 <meta name="twitter:title" content="Abhishek Singh">
 <meta name="twitter:description" content="">
-<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/7c7a5562-5701-4c33-ba6c-37e833bbd044.jpg?token=97IZVubHDPrdTm_CIg0YHoNJutwDykDpObKmOprx1cw&height=800&width=1200&expires=33242965137">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/69ad5b5f-a0cb-4d6a-a5ef-2c4e4b162779.png?token=5K_pqYbRDovquRAK4kWSnuBCv3t6hWnuoGA81KO-wgc&height=550&width=825&expires=33281785501">
 
-<!-- Meta Tags -->
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 
 <!-- Google tag (gtag.js) -->
