--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="cv-download">
-                    <button><a href="https://drive.google.com/file/d/1bxvLB1K4ABGbF4PpJwV9W1f7zQPcTfiK/view?usp=sharing" target="_blank"><i class="fa-solid fa-download"></i>
+                    <button><a href="https://drive.google.com/file/d/1i9XlNSIa70QaHRvhSdENj4JyPe_nkIZp/view?usp=sharing" target="_blank"><i class="fa-solid fa-download"></i>
                             Download Resume </a></button>
                 </div>
             </div>
@@ -208,22 +208,20 @@
                         <!-- <h6>Know More About Me</h6> -->
                         <p>Hello! I'm an Engineering undergraduate at ZHCET, Aligarh Muslim University, with a strong focus on entrepreneurship, application development, web development, UI/UX design, and problem-solving through efficient computer programming techniques.<br>
 
-<br> I previously served as the Google Developer Student Clubs Lead at my college, founded my first startup, "Start N Shine," a community-based initiative, and contributed as an initial founding member and frontend developer at "Stick." Currently, I'm working as a Software Engineer at the SaaS-based startup Otohire. In addition, I freelance part-time, having worked with many satisfied clients.
+<br>I previously served as the Google Developer Student Clubs Lead at my college, where I led tech initiatives and community-driven learning. I founded my first startup, Start N Shine, focused on community building and entrepreneurship. <br>I was also a founding team member and core frontend developer at both "Stick" and the SaaS-based hiring platform Otohire. At Stick, I played a key role in building the initial product prototype and was part of the team that pitched to incubators at IIT Roorkee, AMU, and DU, successfully achieving incubation. We were also shortlisted for the final round of pitching at Shark Tank India (Mumbai) — presenting our startup at one of the most prestigious national platform. <br>
+In parallel, I work as a freelancer, delivering tailored web/app development and UI/UX design solutions to multiple clients across various domains.
                         </p>
                         <br>
-                        <p>Passionate programmer who loves teamwork and is always ready to collaborate and share
-                            ideas with others. I help small and large scale businesses gain visibility and connectivity
-                            through developing professional , Applications and UI Design that
-                            communicate their brand's expertise.</p>
+                        <p>Passionate programmer and product builder who thrives in collaborative environments and values teamwork and idea-sharing. I help startups and businesses, both small and large, gain visibility and engagement by building professional applications and intuitive UI designs that effectively communicate their brand identity and expertise.</p>
                         <br>
-                        <p>
+                        <!-- <p>
 
                             I'm handy with Technologies like,
                             HTML5, CSS3, JavaScript (ReactJs/NodeJs), MongoDB, Express.js, Flutter, Firebase, Git/GitHub, Bitbucket, 
 Retool, Google Analytics, SEO, WordPress, Wix, Webflow, Linux OS, VMware, Hypervisors, Adobe XD, Figma, 
 Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others. 
                            
-                        </p>
+                        </p> -->
 
 
                         <!-- <br> -->
@@ -248,8 +246,8 @@ Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others.
                     <div class="resume-details">
                         <div>
                             <p><span>Address:</span> &nbsp; Aligarh, Uttar Pradesh, India.</p>
-                            <p><span>Phone:</span> &nbsp; +918218698619</p>
-                            <p><span>Email:</span> &nbsp; Lucifer2072003@gmail.com</p>
+                            <p><span>Phone:</span> &nbsp; +918218698610</p>
+                            <p><span>Email:</span> &nbsp; abhisheksinghpro007@gmail.com</p>
                         </div>
                         <div>
                             <p><span>GitHub:</span>  &nbsp;www.github.com/Abhishek-207</p>
@@ -262,9 +260,9 @@ Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others.
 
                     <h6> Entrepreneur | Developer | UI/UX Designer </h6>
                     <br>
-                    <p> I'm a Mechanical Engineering undergraduate from Zakir Hussain College of Engineering and Technology, Aligarh Muslim University. Pursuing engineering has always been a dream, fueled by a strong enthusiasm for technology and innovation. As a tech enthusiast, I have experience in web development, application development, and UI/UX design.
+                    <p> I'm a Mechanical Engineering undergraduate from Zakir Hussain College of Engineering and Technology, Aligarh Muslim University, driven by a deep passion for technology and innovation. While pursuing engineering, I discovered my love for building digital products and have since gained hands-on experience in web development, application development, and UI/UX design.
 
-I founded my first startup, "Start N Shine," a community-based initiative. Previously, I was part of the founding team and worked as a frontend developer at "Stick". Currently, I'm working as a Software Engineer at the SaaS-based startup Otohire. I also freelance part-time, collaborating with many satisfied clients.
+                        I founded my first startup, "Start N Shine", a community-based initiative aimed at empowering aspiring entrepreneurs. I was also part of the founding team at "Stick", where I contributed as a core frontend developer. Currently, I worked as a Software Engineer at Otohire, a SaaS-based startup revolutionizing the hiring process. Alongside, I pursue part-time freelance work, delivering tailored tech solutions to a wide range of satisfied clients.
 
 </p>
 
@@ -383,7 +381,7 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                     <br>
                     <br>
                     <div class="cv-download resume-download">
-                        <button><a href="https://drive.google.com/file/d/1bxvLB1K4ABGbF4PpJwV9W1f7zQPcTfiK/view?usp=sharing" target="_blank"><i class="fa-solid fa-download"></i>
+                        <button><a href="https://drive.google.com/file/d/1i9XlNSIa70QaHRvhSdENj4JyPe_nkIZp/view?usp=sharing" target="_blank"><i class="fa-solid fa-download"></i>
                                 Download Resume </a></button>
                     </div>
 
@@ -708,9 +706,9 @@ I founded my first startup, "Start N Shine," a community-based initiative. Previ
                                 <p><a href="https://api.whatsapp.com/send?phone=918218698610" target="_blank"><span><i
                                                 class="fa-brands fa-square-whatsapp"></i></span> +91 8218698610</a>
                                 </p>
-                                <p><a href="mailto:lucifer2072003@gmail.com
+                                <p><a href="mailto:abhisheksinghpro007@gmail.com
                                     " target="_blank"><span><i
-                                                class="fa-solid fa-square-envelope"></i></span>lucifer2072003@gmail.com
+                                                class="fa-solid fa-square-envelope"></i></span>abhisheksinghpro007@gmail.com
                                     </a>
                                 </p>
                                 <p><a href="https://github.com/Abhishek-207"><span><i
