stuff added, and UI fixes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 class="fa-brands fa-square-github"></i></a>
                         <a href="https://www.linkedin.com/in/abhishek-singh2073" target="_blank"><i
                                 class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.instagram.com/abhi_.singh.007/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                        <!-- <a href="https://www.instagram.com/abhi_.singh.007/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a> -->
                                <a href="#" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
                         <a href="https://twitter.com/Alpha_2071" target="_blank"><i
                                 class="fa-brands fa-square-twitter"></i></a>
@@ -173,7 +173,7 @@
                      <p><span><i class="fa-solid fa-check"></i></span> Product Development</p>
                     <p><span><i class="fa-solid fa-check"></i></span> UI/UX Design</p>
                       <p><span><i class="fa-solid fa-check"></i></span> DevOps</p>
-                    <p><span><i class="fa-solid fa-check"></i></span>SEO</p>
+                    <p><span><i class="fa-solid fa-check"></i></span> SEO</p>
                     <p><span><i class="fa-solid fa-check"></i></span> Graphics Design</p>
                     <p><span><i class="fa-solid fa-check"></i></span> CMS</p>
                     
@@ -415,7 +415,7 @@ Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others.
 
         <div class="project">
             <div class="pro-name">
-                <h6> <span>2</span>PhysixFever</h6>
+                <h6> <span>2</span>Physixfever</h6>
             </div>
             <div class="pro-img">
                 <img src="assets/img/project/physixfever.png" alt="project image">
@@ -425,6 +425,19 @@ Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others.
                 <!-- <a href="#" target="_blank">Source Code</a> -->
             </div>
         </div>
+
+        <div class="project">
+            <div class="pro-name">
+                <h6> <span>3</span>Invoice Tracker</h6>
+            </div>
+            <div class="pro-img">
+                <img src="assets/img/project/invtracker.png" alt="project image">
+            </div>
+            <div class="pro-links">
+                <a href="https://invoice-tracker-l-t.netlify.app/" target="_blank"> Live Application</a>
+            </div>
+        </div>
+
 
         <div class="project">
             <div class="pro-name">
@@ -724,8 +737,8 @@ Adobe Photoshop, Adobe After Effects, FL Studio, OBS Studio, among many others.
                                 <p><a href="https://www.linkedin.com/in/abhishek-singh2073/" target="_blank"><span><i
                                                 class="fa-brands fa-linkedin"></i></span>linkedin.com/Abhishek Singh</a>
                                 </p>
-                                <p><a href="https://www.instagram.com/abhi_.singh.007/" target="_blank"><span><i
-                                                class="fa-brands fa-square-instagram"></i></span>Abhishek Singh </a></p>
+                                <!-- <p><a href="https://www.instagram.com/abhi_.singh.007/" target="_blank"><span><i
+                                                class="fa-brands fa-square-instagram"></i></span>Abhishek Singh </a></p> -->
                                  <p><a href="#" target="_blank"><span><i
                                                 class="fa-brands fa-square-facebook"></i></span>Abhishek Singh</a></p>
                                 <p><a href="https://twitter.com/Alpha_2071" target="_blank"><span><i class="fa-brands fa-square-twitter"></i></span>
