--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h4>Abhishek Singh </h4>
                       
                          <p> <span>Entrepreneur |</span> <span>Developer </span>  </p><br>
-                        <p> <span>Google DSC Lead 23' <a href="https://gdg.community.dev/gdg-on-campus-zakir-husain-college-of-engineering-and-technology-aligarh-india/" target="_blank">@ZHCET AMU </a> </span> </p><br>  <p> <span> Software Developer  <a href="https://erpica.netlify.app/" target="_blank">@Temflo Systems Pvt Ltd </a> </span> </p><br>
+                        <p> <span>Google DSC Lead 23' <a href="https://gdg.community.dev/gdg-on-campus-zakir-husain-college-of-engineering-and-technology-aligarh-india/" target="_blank">@ZHCET AMU </a> </span> </p><br>  <p> <span> Software Developer  <a href="https://erpica.in/" target="_blank">@Temflo Systems Pvt Ltd </a> </span> </p><br>
                                                 <p> <span> Ex-SWE Intern <a href="https://otohire.com/" target="_blank">@Otohire</a> </span> </p><br>
                           <p> <span> Ex-Frontend Developer <a href="https://stickapp.club/" target="_blank">@Stick</a> </span> </p><br>
                        
